--- a/index.css
+++ b/index.css
@@ -1,13 +1,24 @@
 html {
     font-family:sans-serif;
-    color: blue;
+    color:blue;
+    border-style: solid;
+    border-color:black;
 }
 .todo{
     font-weight:bold;
-    color#f44336;
-    background-color:#F5F5F5;
-    border-radius:50pxi;
+    color: #ff0000;
+    background-color:#000000;
+    border-radius:50px;
     font-size:14px;
     padding:5px 10px 5px 10px;
     
+}
+#submit-button{
+    font-size:20px;
+    box-shadow: 1px 1px 1px 
+    #90A4AE;
+}
+li{
+    padding:5px;
+    Margin-bottom:10px;
 }
