--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
     background-color:#000000;
     border-radius:50px;
     font-size:14px;
-    padding:5px 10px 5px 10px;
+    padding:5px 20px 5px 10px;
     
 }
 #submit-button{
@@ -21,6 +21,12 @@ html {
 }
 li{
     padding:5px;
-    Margin-bottom:10px;
-    text-align: center
+    Margin-bottom:25px;
+}
+ul{
+    margin:0px 620px 100px 500px;
+}
+body{
+    background-image: url("http://nflrt.com/wp-content/uploads/2014/07/Patriots-Tom-Brady-Jared-Wickerham-2.jpeg");
+    margin: -25px 100px 100px 100px;
 }
