--- a/index.css
+++ b/index.css
@@ -1,21 +1,18 @@
 html {
     font-family:sans-serif;
     color:blue;
-    border-style: solid;
-    border-color:black;
     text-align: center
 }
 .todo{
     font-weight:bold;
     color: #ff0000;
-    background-color:#000000;
-    border-radius:50px;
-    font-size:14px;
-    padding:5px 20px 5px 10px;
+    border-radius:25px;
+    font-size:22px;
+    padding:5px 150px 0px 0px;
     
 }
 #submit-button{
-    font-size:20px;
+    font-size:18px;
     box-shadow: 1px 1px 1px 
     #90A4AE;
 }
@@ -24,9 +21,9 @@ li{
     Margin-bottom:25px;
 }
 ul{
-    margin:0px 620px 100px 500px;
+    margin:0px 520px 100px 500px; /*top right bottom left */
 }
 body{
-    background-image: url("http://nflrt.com/wp-content/uploads/2014/07/Patriots-Tom-Brady-Jared-Wickerham-2.jpeg");
-    margin: -25px 100px 100px 100px;
+ background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/light-column-particles_-ybovlvgs__F0000.png)
+
 }
