--- a/index.css
+++ b/index.css
@@ -24,6 +24,6 @@ ul{
     margin:0px 520px 100px 500px; /*top right bottom left */
 }
 body{
- background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/light-column-particles_-ybovlvgs__F0000.png)
+    background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/light-column-particles_-ybovlvgs__F0000.png);
 
 }
